# AnalogClock

./: CMakeLists.txt
src/: clock_widget.cpp  clock_widget.h  logger.cpp  logger.h  main.cpp  window.cpp  window.h
